src/test/deca/context/invalid/resultats/test_substraction_class-cont.res
./src/test/deca/context/invalid/test_substraction_class.deca:23:5: The types are incompatible for a Arithmetic Operation
